api2/sre/api2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api2-service
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: api2
